# stack
project_units += executable(
    'stack',
    'stack.c',
    include_directories : project_includes,
    link_with : container_library
)

# treemap
project_units += executable(
    'treemap',
    'treemap.c',
    include_directories : project_includes,
    link_with : [container_library, function_library]
)

# vector
project_units += executable(
    'vector',
    'vector.c',
    include_directories : project_includes,
    link_with : container_library
)
